Make categories width slightly wider to avoid wrap.

--- a/public/styles.css
+++ b/public/styles.css
@@ -48,7 +48,7 @@
     }
 
     th.category, td.category {
-        width: 100px;
+        width: 110px;
     }
 
     th.player, td.player {
